<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.upv.pm_2022.iti_27849_u1_equipo_08.fragments.HomeFragment"
        android:label="@string/str_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/navigation_loans"
        android:name="com.upv.pm_2022.iti_27849_u1_equipo_08.fragments.LoansFragment"
        android:label="@string/str_loans"
        tools:layout="@layout/loans"/>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.upv.pm_2022.iti_27849_u1_equipo_08.fragments.ProfileFragment"
        android:label="@string/str_profile"
        tools:layout="@layout/profile"/>

</navigation>